<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spendLabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_item_label_text_month"
        android:layout_alignParentTop="true"
        android:lineSpacingExtra="1dp"
        style="@style/style_11_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spendLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_item_label_available_amt"
        android:layout_below="@+id/spendLabel1"
        android:lineSpacingExtra="1dp"
        style="@style/style_11_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spendAsset"
        android:paddingTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@+id/spendLabel2"
        android:layout_alignBaseline="@+id/spendLabel2"
        android:lineSpacingExtra="1dp"
        style="@style/style_18_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/spendUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/card_item_label_currency"
        android:layout_toRightOf="@+id/spendAsset"
        android:layout_alignBaseline="@+id/spendAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_11_bold_black"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/limitLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_item_label_spend_limit"
        android:layout_alignBaseline="@+id/limitAsset"
        style="@style/style_11_bold_6C6C6C"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/limitAsset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@+id/limitLabel"
        android:layout_below="@+id/spendAsset"
        android:layout_alignLeft="@+id/spendAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_15_medium_6C6C6C"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/limitUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/card_item_label_currency"
        android:layout_toRightOf="@+id/limitAsset"
        android:layout_alignBaseline="@+id/limitAsset"
        android:lineSpacingExtra="1dp"
        style="@style/style_11_bold_6C6C6C"/>
</RelativeLayout>
