<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:gravity="start|center_vertical"
                android:id="@+id/tv_deposit_dialog_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_title_confirm_model_change"
                style="@style/style_15_bold_black"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/detail_model_change"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_gravity="start|top"
                android:id="@+id/tv_body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_confirm_model_change_text"
                android:lineSpacingExtra="6dp"
                style="@style/style_14_medium_black"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_account"
                android:background="?android:attr/selectableItemBackground"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/style_15_bold_orange"/>
            <TextView
                android:background="@drawable/deposit_caution_round"
                android:padding="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/text_confirm_model_change_subtext"
                android:lineSpacingExtra="4dp"
                style="@style/style_11_bold_D50000"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:gravity="end"
        android:orientation="horizontal"
        android:id="@+id/ll_bottom_right_button"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="14dp"
            android:textColor="@color/textColorBlue"
            android:id="@+id/tv_negative_button"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_model_change"/>
        <Space
            android:layout_width="8dp"
            android:layout_height="0dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="14dp"
            android:textColor="@color/textColorBlue"
            android:id="@+id/tv_positive_button"
            android:background="?android:attr/selectableItemBackground"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_model_change"/>
    </LinearLayout>
</LinearLayout>
