<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bgcolor_primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_weight="1">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Space
                android:layout_width="0dp"
                android:layout_height="28dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="22dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/guide_recommend_account_linkage_title"
                android:lineSpacingExtra="6dp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="28dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="15dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/guide_recommend_account_linkage_description"
                android:lineSpacingExtra="5dp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="14dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="12dp"
                android:textColor="@color/white"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/tutorial_account_note"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:srcCompat="@drawable/tutorial_img_account"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:textSize="18dp"
        android:textColor="@color/text_collar_white"
        android:gravity="center"
        android:id="@+id/next"
        android:background="@drawable/button_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/button_text_next"
        style="@style/TextAppearance.ButtonText"/>
</LinearLayout>
