<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="12dp"
                android:gravity="right"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_account_name"
                android:layout_weight="6"/>
            <TextView
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_item_label_detail_screen_colon"/>
            <TextView
                android:textSize="12dp"
                android:ellipsize="end"
                android:id="@+id/tv_account_change_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="12dp"
                android:gravity="right"
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_account_change_date"
                android:layout_weight="6"/>
            <TextView
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_item_label_detail_screen_colon"/>
            <TextView
                android:textSize="12dp"
                android:id="@+id/tv_change_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="12dp"
                android:gravity="right"
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_account_change_app"
                android:layout_weight="6"/>
            <TextView
                android:textSize="12dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_item_label_detail_screen_colon"/>
            <TextView
                android:textSize="12dp"
                android:id="@+id/tv_change_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
