<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/ll_mfi_login_bar"
        android:background="@color/color_2280D4"
        android:focusable="true"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="72dp">
        <ImageView
            android:id="@+id/image1"
            android:background="@drawable/myservice_mfi_login_icon"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="8dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/image1">
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_guidance_sentence"
                style="@style/style_16_bold_white"/>
            <TextView
                android:gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/login_guidance_sub_sentence"
                style="@style/style_12_medium_DAECFA_3space"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_mfi_login_close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true">
            <ImageView
                android:background="@drawable/myservice_mfi_login_close_icon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="18dp"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_notice_bar"
        android:background="@color/blue_bg"
        android:focusable="true"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginBottom="-6dp">
        <ImageView
            android:background="@drawable/bg_notice_icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="6dp"/>
        <TextView
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/text_new_notice"
            style="@style/style_13_medium_103555"/>
        <ImageView
            android:background="@drawable/bg_notice_arrow"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginTop="12dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_myservice_content_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">
        <TextView
            android:textSize="16dp"
            android:textColor="@color/textcolor_primary"
            android:gravity="start|top"
            android:id="@+id/tv_warning_message_text"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ll_induction_message_text"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:textSize="16dp"
                android:textColor="@color/textcolor_primary"
                android:gravity="top|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/warning_guide_initiate_1"/>
            <TextView
                android:textSize="16dp"
                android:textColor="@color/textcolor_secondary"
                android:gravity="top|center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/warning_guide_initiate_2"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
